testcases/hereiam/positive/login_TC7.sah
_setValue(_textbox("userId"), "nidhi@gmail.com");
_setValue(_password("password"), "hello");
_click(_div("LOGIN"));
